// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  max-width: 100%;
  padding: 0;
}

@media (min-width:768px) {
  .c0 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with maxWidth 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  max-width: 600px;
  padding: 0;
}

@media (min-width:768px) {
  .c0 {
    padding: 0;
  }
}

<div
  className="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with padding 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  max-width: 100%;
  padding: 60px;
}

@media (min-width:768px) {
  .c0 {
    padding: 60px;
  }
}

<div
  className="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;
